<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ClothsActivity">

    <TextView
        android:id="@+id/clothsBigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/bebas_neue"
        android:letterSpacing=".05"
        android:text="@string/cloths_cap"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clothsActivityLeftArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="340dp"
        android:backgroundTint="@color/matte_black"
        app:icon="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clothsActivityRightArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="340dp"
        android:backgroundTint="@color/matte_black"
        app:icon="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/bigShowInputPrice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green"
        android:ems="10"
        android:fontFamily="@font/bebas_neue"
        android:hint="@string/insert_your_price"
        android:inputType="numberSigned"
        android:letterSpacing=".05"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/clothsActivityLeftArrow"
        app:layout_constraintStart_toEndOf="@+id/clothsActivityLeftArrow" />

    <TextView
        android:id="@+id/bigShowText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/big_showrooms"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/bebas_neue"
        android:letterSpacing=".05"
        app:layout_constraintStart_toStartOf="@+id/bigShowInputPrice"
        app:layout_constraintTop_toBottomOf="@+id/bigShowInputPrice" />

    <EditText
        android:id="@+id/onlineShopInputPrice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/green"
        android:ems="10"
        android:fontFamily="@font/bebas_neue"
        android:hint="@string/insert_your_price"
        android:inputType="numberSigned"
        android:letterSpacing=".05"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/bigShowInputPrice"
        app:layout_constraintTop_toBottomOf="@+id/clothsActivityLeftArrow" />

    <TextView
        android:id="@+id/onlineShopText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/online_shopping"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/bebas_neue"
        android:letterSpacing=".05"
        app:layout_constraintStart_toStartOf="@+id/onlineShopInputPrice"
        app:layout_constraintTop_toBottomOf="@+id/onlineShopInputPrice" />

    <TextView
        android:id="@+id/outputPriceText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/price_with_vat"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/bebas_neue"
        android:letterSpacing=".05"
        app:layout_constraintStart_toStartOf="@+id/onlineShopInputPrice"
        app:layout_constraintTop_toBottomOf="@+id/outputClothPriceTK" />

    <TextView
        android:id="@+id/outputClothPriceTK"
        android:layout_width="200dp"
        android:layout_height="50sp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/bebas_neue"
        android:letterSpacing=".05"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/onlineShopInputPrice"
        app:layout_constraintTop_toBottomOf="@+id/onlineShopInputPrice" />

    <TextView
        android:id="@+id/tkFont"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginBottom="13dp"
        android:text="@string/tk"
        android:textAlignment="viewEnd"
        android:textColor="@color/green"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/outputPriceText"
        app:layout_constraintStart_toEndOf="@+id/outputClothPriceTK" />

</androidx.constraintlayout.widget.ConstraintLayout>