<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_bg"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/shopCategoryDropDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="285dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/foodRadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food" />

        <RadioButton
            android:id="@+id/clothsRadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloths" />
    </RadioGroup>

    <EditText
        android:id="@+id/inputPrice"
        android:hint="@string/enter_price"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/outputPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        tools:layout_editor_absoluteX="154dp" />

    <TextView
        android:id="@+id/priceWithVat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/outputPrice"
        tools:layout_editor_absoluteX="176dp" />

</androidx.constraintlayout.widget.ConstraintLayout>